# theory-lisp

./: .gitattributes  Doxyfile  Makefile.am  README.md  annotated.html  annotated_dup.js  arithmetic_8h.html  arithmetic_8h.js  arithmetic_8h_source.html  automaton_2automaton_8h.html  automaton_2automaton_8h.js  automaton_2automaton_8h_source.html  builtin_2boolean_8h.html  builtin_2boolean_8h.js  builtin_2boolean_8h_source.html  builtin_2error_8h.html  builtin_2error_8h.js  builtin_2error_8h_source.html  builtin_2list_8h.html  builtin_2list_8h.js  builtin_2list_8h_source.html  builtin_2object_8h.html  builtin_2object_8h.js  builtin_2object_8h_source.html  builtin_2string_8h.html  builtin_2string_8h.js  builtin_2string_8h_source.html  builtin_8h.html  builtin_8h.js  builtin_8h_source.html  classes.html  common_8h.html  common_8h.js  common_8h_source.html  cond_8h.html  cond_8h.js  cond_8h_source.html  configure.ac  data_8h.html  data_8h.js  (+242 more)
.github/workflows/: c-cpp.yml
doc/html/: annotated.html  annotated_dup.js  arithmetic_8h.html  arithmetic_8h_source.html  automaton_2automaton_8h.html  automaton_2automaton_8h.js  automaton_2automaton_8h_source.html  builtin_2boolean_8h.html  builtin_2boolean_8h_source.html  builtin_2error_8h.html  builtin_2error_8h_source.html  builtin_2list_8h.html  builtin_2list_8h_source.html  builtin_2object_8h.html  builtin_2object_8h_source.html  builtin_2string_8h.html  builtin_2string_8h_source.html  builtin_8h.html  builtin_8h.js  builtin_8h_source.html  classes.html  common_8h.html  common_8h_source.html  cond_8h.html  cond_8h_source.html  cond__expr_8h.html  cond__expr_8h.js  cond__expr_8h_source.html  data_8h.html  data_8h_source.html  data__expr_8h.html  data__expr_8h.js  data__expr_8h_source.html  definition_8h.html  definition_8h_source.html  definition__expr_8h.html  definition__expr_8h.js  definition__expr_8h_source.html  dir_0c0c9fa8a58db41e576adc3ce68c5ee9.html  dir_0c0c9fa8a58db41e576adc3ce68c5ee9.js  (+219 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enumvalues_0.js  files_0.js  files_1.js  files_11.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+40 more)
examples/: macro-examples.tl
examples/fsm/: mod2sum.tl  mod3sum.tl
examples/markov/: markov.tl
examples/turing-machine/: turing-machine.tl
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_10.js  files_11.js  files_2.js  files_3.js  (+38 more)
src/: Makefile.am  code.scm  main.c
src/automaton/: automaton.c  automaton.h
src/builtin/: arithmetic.c  arithmetic.h  boolean.c  boolean.h  builtin.c  builtin.h  display.c  display.h  error.c  error.h  eval.c  eval.h  include.c  include.h  io.c  io.h  list.c  list.h  macro_utils.c  macro_utils.h  math.c  math.h  object.c  object.h  string.c  string.h
src/doc/: builtins.md  expressions.md  types.md
src/expressions/: automaton.c  automaton.h  common.c  common.h  cond.c  cond.h  cond_expr.c  cond_expr.h  data.c  data.h  data_expr.c  data_expr.h  definition.c  definition.h  definition_expr.c  definition_expr.h  evaluation.c  evaluation.h  evaluation_expr.c  evaluation_expr.h  expanded.c  expanded.h  expanded_expr.c  expanded_expr.h  expression.c  expression.h  expression_base.h  identifier.c  identifier.h  identifier_expr.c  identifier_expr.h  if.c  if.h  if_expr.c  if_expr.h  lambda.c  lambda.h  lambda_expr.c  lambda_expr.h  let.c  (+11 more)
src/interpreter/: interpreter.c  interpreter.h  stack_frame.c  stack_frame.h  variable.c  variable.h
src/lib/: automata.tl  collection.tl  library.tl  list.tl  logic.tl  macro.tl  match.tl  primitives.tl  string.tl  syntax.tl  util.tl
src/parser/: parser.c  parser.h
src/scanner/: scanner.c  scanner.h
src/types/: boolean.c  boolean.h  error.c  error.h  integer.c  integer.h  internal.c  internal.h  null.c  null.h  object-base.h  object.c  object.h  pair.c  pair.h  procedure.c  procedure.h  rational.c  rational.h  real.c  real.h  string.c  string.h  symbol.c  symbol.h  types.c  types.h  void.c  void.h
src/utils/: file.c  file.h  hashtable.c  hashtable.h  heap-format.c  heap-format.h  init.c  init.h  list.c  list.h  stack.c  stack.h  string.c  string.h  test  test.c
tests/: Makefile.am
tests/expressions/: check_cond.c  check_define.c  check_evaluation.c  check_if.c  check_lambda.c  check_let.c  parse.h
tests/interpreter/: check_stack_frame.c
tests/scanner/: check_scanner.c
tests/types/: ,  check_boolean.c  check_error.c  check_integer.c  check_pair.c  check_procedure.c  check_real.c  check_string.c  check_symbol.c  check_types.c  check_void.c
tests/utils/: check_format.c  check_list.c  check_stack.c  check_string.c
